[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/game-menu/MenuBackground.png" type="Texture" id=1]
[ext_resource path="res://assets/cheems/player_cry2.png" type="Texture" id=2]
[ext_resource path="res://assets/consultingroom/sillom.png" type="Texture" id=3]
[ext_resource path="res://assets/consultingroom/floor_consultory.png" type="Texture" id=4]
[ext_resource path="res://assets/consultingroom/divan.png" type="Texture" id=5]
[ext_resource path="res://assets/froid/FroidBG.png" type="Texture" id=6]
[ext_resource path="res://assets/consultingroom/wall_consultory.png" type="Texture" id=7]
[ext_resource path="res://assets/fonts/Candy Beans.otf" type="DynamicFontData" id=8]
[ext_resource path="res://assets/UI/globeTwo.png" type="Texture" id=9]
[ext_resource path="res://assets/UI/globeThree.png" type="Texture" id=10]
[ext_resource path="res://scenes/consulting-room/ConsultingRoom.gd" type="Script" id=11]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=3]
size = 120
font_data = ExtResource( 8 )

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("fadeIN:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "elipsis"
length = 7.0
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 6, 6.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "fadeIN"
tracks/0/type = "value"
tracks/0/path = NodePath("fadeIN:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="ConsultingRoom" type="Node2D"]
script = ExtResource( 11 )

[node name="ConsultingRoomBG" type="Sprite" parent="."]
position = Vector2( 960, 540 )
texture = ExtResource( 1 )

[node name="Wall" type="Sprite" parent="."]
position = Vector2( 960, 360 )
texture = ExtResource( 7 )

[node name="Floor" type="Sprite" parent="."]
position = Vector2( 962, 804 )
texture = ExtResource( 4 )

[node name="Divan" type="Sprite" parent="."]
position = Vector2( 455, 620 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 5 )

[node name="Couch" type="Sprite" parent="."]
position = Vector2( 1517, 536 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 3 )

[node name="Froid" type="Sprite" parent="."]
position = Vector2( 1476, 520 )
texture = ExtResource( 6 )

[node name="Cheems" type="Sprite" parent="."]
position = Vector2( 511, 553 )
rotation = -1.4207
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="TextContainer" type="Sprite" parent="."]
position = Vector2( 1110, 809 )
texture = ExtResource( 10 )
flip_v = true

[node name="RichTextLabel" type="RichTextLabel" parent="TextContainer"]
margin_left = -211.0
margin_top = -117.0
margin_right = 242.0
margin_bottom = 204.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "LO QUE TIENES SE LLAMA 
[wave amp=50 freq=2]ANSIEDAD SOCIAL[/wave] 
NO TE PREOCUPES, JUNTOS LOGRAREMOS
QUE TE SIENTAS MEJOR"
text = "LO QUE TIENES SE LLAMA 
ANSIEDAD SOCIAL 
NO TE PREOCUPES, JUNTOS LOGRAREMOS
QUE TE SIENTAS MEJOR"
scroll_active = false

[node name="TextContainer2" type="Sprite" parent="."]
position = Vector2( 717, 260 )
texture = ExtResource( 9 )

[node name="RichTextLabel" type="RichTextLabel" parent="TextContainer2"]
margin_left = -120.0
margin_top = -61.0
margin_right = 157.0
margin_bottom = 111.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[shake rate=10 level=10]TODO EMPEZÓ CUANDO TENÍA 5 AÑOS . . . "
text = "TODO EMPEZÓ CUANDO TENÍA 5 AÑOS . . . "
scroll_active = false

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_right = 1917.0
margin_bottom = 1083.0
color = Color( 0.0509804, 0.0509804, 0.0509804, 1 )

[node name="Label" type="RichTextLabel" parent="ColorRect"]
margin_left = 488.0
margin_top = 423.0
margin_right = 1557.0
margin_bottom = 717.0
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[wave amp=50 freq=2] TIEMPO DESPUES"
text = " TIEMPO DESPUES"

[node name="fadeIN" type="ColorRect" parent="."]
margin_right = 1917.0
margin_bottom = 1083.0
color = Color( 0.0509804, 0.0509804, 0.0509804, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 4 )
anims/elipsis = SubResource( 5 )
anims/fadeIN = SubResource( 6 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
